--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,8 @@ html {
 	--color-rfx: #05b37f;
 	--color-cre: #fadf63;
 
+	--color-community: var(--color-cre);
+
 	--border-radius: 0.35rem;
 }
 
@@ -103,4 +105,8 @@ a.icon-link {
 }
 .cre {
 	background-color: var(--color-cre);
+}
+
+.community {
+	color: var(--color-community);
 }
