--- a/src/fonts.css
+++ b/src/fonts.css
@@ -12,6 +12,6 @@
 
 @font-face {
 	font-family: 'Michroma';
-	font-weight: bold;
-	src: url('/fonts/Michroma-Regular.ttf') format('ttf');
+	font-weight: normal;
+	src: url('/fonts/Michroma-Regular.ttf') format('truetype');
 }
